Pre-Final js-hw-10

--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,26 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homework 10</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
+    <title>Country Finder</title>
   </head>
   <body>
-    <input type="text" id="search-box" />
+    <img
+      class="logo"
+      src="images/country-finder-logo.png"
+      alt="Country Finder website logo"
+    />
+    <div class="container">
+      <input class="search" type="text" id="search-box" />
+      <img class="search__icon" src="images/search.svg" alt="search icon" />
+    </div>
+
     <ul class="country-list"></ul>
     <div class="country-info"></div>
 
